--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@ search_exclude: true
 image: images/logo.png
 ---
 
+# Latest Posts
 This site is built with [fastpages](https://github.com/fastai/fastpages).
-
-# Latest News
