--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>.</p>
-
-<h1 id="latest-news">Latest News</h1>
+        <div class="home"><h1 id="latest-posts">Latest Posts</h1>
+<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>.</p>
 
 
 
