--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-
+This site is built with [fastpages](https://github.com/fastai/fastpages)
 # Latest Posts
