deploy: 9015544355dc4206ba459932b57b430530d080f5

--- a/about/index.html
+++ b/about/index.html
@@ -166,7 +166,7 @@ World Happiness Analysis			              		     September 2020 – December 2020
         </p>
       </div>
       <div class="footer-col">
-        <p>This site is built with [fastpages](https://github.com/fastai/fastpages).</p>
+        <p>This site is built with fastpages.</p>
       </div>
     </div>
 
