deploy: 6dfeb1ce8b35f1e77cd0affa646381dec302e9a5

--- a/about/index.html
+++ b/about/index.html
@@ -79,20 +79,7 @@ window.onload = wrap_img;
     <p><a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">MD Cheatsheet</a></p>
 
 <h2 id="christopher-guan">Christopher Guan:</h2>
-<p><img src="https://sm.askmen.com/t/askmen_in/article/f/facebook-p/facebook-profile-picture-affects-chances-of-gettin_fr3n.1200.jpg" alt="alt text" title="Logo Title Text 1" /></p>
-
-<hr />
-
-<blockquote>
-  <p>Blockquotes are very handy in email to emulate reply text.
-This line is part of the same quote.</p>
-</blockquote>
-
-<p>Quote break.</p>
-
-<blockquote>
-  <p>This is a very long line that will still be quoted properly when it wraps. Oh boy let’s keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can <em>put</em> <strong>Markdown</strong> into a blockquote.</p>
-</blockquote>
+<p><img src="https://sm.askmen.com/t/askmen_in/article/f/facebook-p/facebook-profile-picture-affects-chances-of-gettin_fr3n.1200.jpg" alt="alt text" title="Blog owner's profile" /></p>
 
 <h3 id="courses">COURSES</h3>
 <p>Data Mining, Cloud Computing and Big data, Business Data Analytics, Statistical Computing and Graphics, Database Systems, Data structure and Algorithm, Computation Analysis and Practical Programing, Linear Algebra, Probability, Statistics
@@ -145,6 +132,16 @@ World Happiness Analysis			              		     September 2020 – December 2020
 <p>·	Data Analysis in Spreadsheets
 ·	Intermediate R for Finance
 ·	Credit Risk Modeling in R</p>
+
+<hr />
+
+<p>My favorite quote</p>
+
+<blockquote>
+  <p>“Great beauty, great strength, and great riches are really and truly of no great use; a right heart exceeds all”</p>
+</blockquote>
+
+<p>― Benjamin Franklin</p>
 
 <p>This website is powered by <strong><a href="https://github.com/fastai/fastpages">fastpages</a></strong> [^1].
 [^1]:a blogging platform that natively supports Jupyter notebooks in addition to other formats.</p>
