--- a/about/index.html
+++ b/about/index.html
@@ -138,10 +138,9 @@ World Happiness Analysis			              		     September 2020 – December 2020
 <p>My favorite quote</p>
 
 <blockquote>
-  <p>“Great beauty, great strength, and great riches are really and truly of no great use; a right heart exceeds all”</p>
+  <p>“Great beauty, great strength, and great riches are really and truly of no great use; a right heart exceeds all”
+― Benjamin Franklin</p>
 </blockquote>
-
-<p>― Benjamin Franklin</p>
 
 <p>This website is powered by <strong><a href="https://github.com/fastai/fastpages">fastpages</a></strong> [^1].
 [^1]:a blogging platform that natively supports Jupyter notebooks in addition to other formats.</p>
