--- a/about/index.html
+++ b/about/index.html
@@ -79,9 +79,7 @@ window.onload = wrap_img;
     <p><a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">MD Cheatsheet</a></p>
 
 <h2 id="christopher-guan">Christopher Guan:</h2>
-<div style="text-align: center;">
-<img src="https://cdn.pixabay.com/photo/2016/02/25/18/26/man-1222621_640.jpg" alt="drawing" width="200" />
-</div>
+<p><img align="right" width="300" height="300" src="https://cdn.pixabay.com/photo/2016/02/25/18/26/man-1222621_640.jpg" /></p>
 
 <h3 id="courses">COURSES</h3>
 <p>Data Mining, Cloud Computing and Big data, Business Data Analytics, Statistical Computing and Graphics, Database Systems, Data structure and Algorithm, Computation Analysis and Practical Programing, Linear Algebra, Probability, Statistics
