--- a/about/index.html
+++ b/about/index.html
@@ -80,13 +80,13 @@ window.onload = wrap_img;
 
 <p><img align="right" width="300" height="300" src="https://cdn.pixabay.com/photo/2016/02/25/18/26/man-1222621_640.jpg" /></p>
 
-<h1 id="chris-guan">Chris Guan</h1>
+<h2 id="chris-guan">Chris Guan</h2>
 
 <h2 id="courses">Courses</h2>
 <p>Data Mining, Cloud Computing and Big data, Business Data Analytics, Statistical Computing and Graphics, Database Systems, Data structure and Algorithm, Computation Analysis and Practical Programing, Linear Algebra, Probability, Statistics</p>
 
 <h2 id="experience">Experience</h2>
-<p><strong>Youtube Data Automation</strong>                                                                  (December 2021 – January 2022)<br />
+<p><strong>Youtube Data Automation</strong>                                                                  December 2021 – January 2022<br />
 Paid Project <br /></p>
 <ul>
   <li>Obtained authorization credentials and stored hidden Youtube data in a csv file. <br /></li>
@@ -96,7 +96,7 @@ Paid Project <br /></p>
 
 <p><br /></p>
 
-<p><strong>CRM System</strong>                                                                (May 2021– September 2021) <br />
+<p><strong>CRM System</strong>                                                                    May 2021– September 2021 <br />
 Summer Internship <br /></p>
 <ul>
   <li>Narrowed CRM applications that fit the financial department’s expectation. <br /></li>
@@ -106,7 +106,7 @@ Summer Internship <br /></p>
 
 <p><br /></p>
 
-<p><strong>Data Mining</strong>                                                                                                   (January 2021 – May 2021) <br />
+<p><strong>Data Mining</strong>                                                                                               January 2021 – May 2021 <br />
 Multiple Projects <br /></p>
 <ul>
   <li>Outlined and understood the overall view of data mining through learning and proficient use of RapidMiner Studio. <br /></li>
@@ -116,7 +116,7 @@ Multiple Projects <br /></p>
 
 <p><br /></p>
 
-<p><strong>Business Data Analytics</strong>                                                                               (May 2020 – August 2020) <br />
+<p><strong>Business Data Analytics</strong>                                                                        May 2020 – August 2020 <br />
 NYC Arrest Record <br /></p>
 <ul>
   <li>Imported, cleaned, and transformed data involving NYC arrest record by using Microsoft Excel and Tableau.  <br /></li>
@@ -126,7 +126,7 @@ NYC Arrest Record <br /></p>
 
 <p><br /></p>
 
-<p><strong>Database System</strong>                                                                                         (January 2020 – May 2020) <br />
+<p><strong>Database System</strong>                                                                                    January 2020 – May 2020 <br />
 Website and SQL Queries  <br /></p>
 <ul>
   <li>Used Python flask and HTML, ran on AWS EC2, made a friendly front-end UI. <br /></li>
@@ -135,7 +135,7 @@ Website and SQL Queries  <br /></p>
 
 <p><br /></p>
 
-<p><strong>Statistical Computing and Graphics</strong>                                                                   (September 2020 – December 2020) <br />
+<p><strong>Statistical Computing and Graphics</strong>                                                        September 2020 – December 2020 <br />
 World Happiness Analysis			            <br /></p>
 
 <ul>
