deploy: 44f157c298b8dd4b08c24027aada1bba7b82bf7c

--- a/about/index.html
+++ b/about/index.html
@@ -81,8 +81,6 @@ window.onload = wrap_img;
 <h2 id="courses">Courses</h2>
 <p>Data Mining, Cloud Computing and Big data, Business Data Analytics, Statistical Computing and Graphics, Database Systems, Data structure and Algorithm, Computation Analysis and Practical Programing, Linear Algebra, Probability, Statistics</p>
 
-<p><br /></p>
-
 <h2 id="experience">Experience</h2>
 <p><strong>Youtube Data Automation</strong>                                                                     December 2021 – January 2022<br />
 Paid Project <br /></p>
@@ -94,7 +92,7 @@ Paid Project <br /></p>
 
 <p><br /></p>
 
-<p><strong>CRM System</strong>                                                                                May 2021– September 2021 <br />
+<p><strong>CRM System</strong>                                                                                     May 2021– September 2021 <br />
 Summer Internship <br /></p>
 <ul>
   <li>Narrowed CRM applications that fit the financial department’s expectation. <br /></li>
@@ -159,7 +157,7 @@ Public Speaking; Public Relations; Event Planning, Storyteller, Teamwork; Detail
   <li>Credit Risk Modeling in R <br /></li>
 </ul>
 
-<h1 id="quote">Quote</h1>
+<h2 id="favorite-quote">Favorite Quote</h2>
 <blockquote>
   <p>“Great beauty, great strength, and great riches are really and truly of no great use; <strong>a right heart exceeds all</strong>”
 ― Benjamin Franklin</p>
