--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,8 @@ window.onload = wrap_img;
 <p>Data Mining, Cloud Computing and Big data, Business Data Analytics, Statistical Computing and Graphics, Database Systems, Data structure and Algorithm, Computation Analysis and Practical Programing, Linear Algebra, Probability, Statistics</p>
 
 <h2 id="experience">Experience</h2>
-<p><strong>Youtube Data Automation</strong>                                                                     December 2021 – January 2022<br />
+<p><br />
+<strong>Youtube Data Automation</strong>                                                                     December 2021 – January 2022<br />
 Paid Project <br /></p>
 <ul>
   <li>Obtained authorization credentials and stored hidden Youtube data in a csv file. <br /></li>
@@ -92,7 +93,7 @@ Paid Project <br /></p>
 
 <p><br /></p>
 
-<p><strong>CRM System</strong>                                                                                     May 2021– September 2021 <br />
+<p><strong>CRM System</strong>                                                                                       May 2021– September 2021 <br />
 Summer Internship <br /></p>
 <ul>
   <li>Narrowed CRM applications that fit the financial department’s expectation. <br /></li>
@@ -112,7 +113,7 @@ Multiple Projects <br /></p>
 
 <p><br /></p>
 
-<p><strong>Business Data Analytics</strong>                                                                          May 2020 – August 2020 <br />
+<p><strong>Business Data Analytics</strong>                                                                           May 2020 – August 2020 <br />
 NYC Arrest Record <br /></p>
 <ul>
   <li>Imported, cleaned, and transformed data involving NYC arrest record by using Microsoft Excel and Tableau.  <br /></li>
@@ -122,7 +123,7 @@ NYC Arrest Record <br /></p>
 
 <p><br /></p>
 
-<p><strong>Database System</strong>                                                                                     January 2020 – May 2020 <br />
+<p><strong>Database System</strong>                                                                                      January 2020 – May 2020 <br />
 Website and SQL Queries  <br /></p>
 <ul>
   <li>Used Python flask and HTML, ran on AWS EC2, made a friendly front-end UI. <br /></li>
@@ -131,7 +132,7 @@ Website and SQL Queries  <br /></p>
 
 <p><br /></p>
 
-<p><strong>Statistical Computing and Graphics</strong>                                                September 2020 – December 2020 <br />
+<p><strong>Statistical Computing and Graphics</strong>                                                  September 2020 – December 2020 <br />
 World Happiness Analysis			            <br /></p>
 
 <ul>
@@ -156,6 +157,8 @@ Public Speaking; Public Relations; Event Planning, Storyteller, Teamwork; Detail
   <li>Intermediate R for Finance <br /></li>
   <li>Credit Risk Modeling in R <br /></li>
 </ul>
+
+<p><br /></p>
 
 <h2 id="favorite-quote">Favorite Quote</h2>
 <blockquote>
