--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ search_exclude: true
 image: images/logo.png
 ---
 
+<style>
+  body { background-image: url("https://images3.alphacoders.com/241/241377.jpg");
+          background-repeat:no-repeat;
+          background-size:cover;
+      } 
+</style>
  
 # Latest Posts
               
