--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="latest-posts">Latest Posts</h1>
+        <div class="home"><style>
+  body { background-image: url("https://images3.alphacoders.com/241/241377.jpg");
+          background-repeat:no-repeat;
+          background-size:cover;
+      } 
+</style>
+
+<h1 id="latest-posts">Latest Posts</h1>
 
 
 
